--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
 <mat-toolbar color="primary">
   <h1>MIAHOOT</h1>
 
-
-
-  <h3>{{ (user | async)?.displayName }}</h3>
-  
-  <div class="user">
-    <button mat-button (click)="login()" *ngIf="showLoginButton">Login with google</button>
-    <a [matMenuTriggerFor]="menu"  *ngIf="showLogoutButton"><img src="{{ (user | async)?.photoURL }}" alt=""></a>
+  <ng-container *ngIf = "user | async as U; else unlogged">
+    {{U.displayName}}
+    <a [matMenuTriggerFor]="menu"><img src="{{U.photoURL}}" alt=""></a>
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click) = "logout()">Log out</button>
       <button mat-menu-item>Configurations du compte</button>
     </mat-menu>
-  </div>
+  </ng-container>
+  <ng-template #unlogged>
+    <button mat-button (click)="login()" >Login with google</button>
+  </ng-template>
+
   
 </mat-toolbar>
